# collectivo

./: .bandit  .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_package.txt  setup.cfg
.github/workflows/: build.yml  build_and_test.yml  deploy-testing.yml  deploy.yml  docker_latest.yml  docs.yml  tag_push_docker_hub.yml  test.yml
app/: .bandit
app/app/: __init__.py  settings.py  urls.py
app/core/: __init__.py  apps.py  urls.py  views.py
app/user/: apps.py  models.py  serializers.py  urls.py  views.py
collectivo/: __init__.py  admin.py  apps.py  errors.py  filters.py  models.py  routers.py  urls.py  utils.py  version.py  views.py
collectivo-app/: .bandit  manage.py
collectivo-app/collectivo-app/: __init__.py  settings.py  urls.py  wsgi.py
collectivo-app/extensions/: settings.py
collectivo-app/test_extension/: urls.py
collectivo-test-app/collectivo-test-app/: settings.py  urls.py
collectivo-test-app/test_extension/: apps.py  menus.py  models.py  populate.py  tests.py  urls.py  views.py
collectivo_app/: .flake8  collectivo.yml  manage.py
contact/: index.html
development/: index.html
docs/: contact.md  developer_guide.md  development.md  getting_started.md  guide.md  how_to_guides.md  index.md  keycloak.md  quickstart.md  reference.md
guide/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
(+416 files in other folders)
